--- a/Module-3-Test/index.html
+++ b/Module-3-Test/index.html
@@ -1,54 +1,113 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Floating Elements</title>
-<style>
+<!doctype html>
+<html lang="en">
 
-div {
-  background-color: #00FFFF;
-}
-p {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-}
-
-#p1 {
-  background-color: #A52A2A;
-  float: left;
-  height: 150px;
-}
-#p2 {
-  background-color: #DEB887;
-  float: right;
-  height: 100px;
-}
-#p3 {
-  background-color: #5F9EA0;
-  clear: both;
-}
-#p4 {
-  background-color: #FF7F50;
-}
-
-section {
-  clear: left;
-}
-
-</style>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 3</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  </head>
 <body>
-<h1>Floating Elements</h1>
 
-<div>
-  <p id="p1"></p>
-  <p id="p2"></p>
-  <p id="p3"></p>
-  <p id="p4"></p>
-  <section>This is regular content continuing after the the paragraph boxes.</section>
-</div>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html" class="pull-left visible-md visible-lg"> </a>
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food,LLC</h1></a>
+          </div>
 
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav hidden-md hidden-sm hidden-lg">
+            <li class="visible-xs active">
+              <a href="#Chicken">Chicken</a>
+            </li>
+            <li>
+              <a href="#Beef">Beef</a>
+            </li>
+            <li>
+              <a href="#Sushi">Sushi</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
+  <div id="main-content" class="container">
+    <div>
+      <h1 id="M">
+        Our Menu
+      </h1>
+    </div>
+    <div class="jumbotron">
+      <h3 id="Chicken">
+        Chicken
+      </h3>
+      <p>
+        Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+
+        Chicken can be prepared in a vast range of ways, including baking, grilling, barbecuing, frying, and boiling, among many others, depending on its purpose. Since the latter half of the 20th century, prepared chicken has become a staple of fast food. Chicken is sometimes cited as being more healthful than red meat, with lower concentrations of cholesterol and saturated fat.
+
+        The poultry farming industry that accounts for chicken production takes on a range of forms across different parts of the world. In developed countries, chickens are typically subject to intensive farming methods, while less-developed areas raise chickens using more traditional farming techniques. The United Nations estimates there to be 19 billion chickens on Earth today, making them outnumber humans more than two to one. 
+
+        Raw chicken may contain Salmonella. The safe minimum cooking temperature recommended by the U.S. Department of Health & Human Services is 165 °F (74 °C) to prevent foodborne illness because of bacteria and parasites. However, in Japan raw chicken is sometimes consumed in a dish called torisashi, which is sliced raw chicken served in sashimi style. Another preparation is toriwasa which is lightly seared on the outsides while the inside remains raw.
+
+        Chicken can be cooked in many ways. It can be made into sausages, skewered, put in salads, traditionally grilled or by using electric grill, breaded and deep-fried, or used in various curries. There is significant variation in cooking methods amongst cultures. Historically common methods include roasting, baking, broasting, and frying. Western cuisine frequently has chicken prepared by deep frying for fast foods such as fried chicken, chicken nuggets, chicken lollipops or Buffalo wings. They are also often grilled for salads or tacos.
+
+        Chickens often come with labels such as "roaster", which suggest a method of cooking based on the type of chicken. While these labels are only suggestions, ones labeled for stew often do not do well when cooked with other methods.
+      </p>
+    </div>
+
+    <div class="jumbotron">
+      <h3 id="Beef">
+        Beef
+      </h3>
+      <p>
+        Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of protein and nutrients.
+
+        Most beef skeletal muscle meat can be used as is by merely cutting into certain parts, such as roasts, short ribs or steak (filet mignon, sirloin steak, rump steak, rib steak, rib eye steak, hanger steak, etc.), while other cuts are processed (corned beef or beef jerky). Trimmings, on the other hand, are usually mixed with meat from older, leaner (therefore tougher) cattle, are ground, minced or used in sausages. The blood is used in some varieties called blood sausage. Other parts that are eaten include other muscles and offal, such as the oxtail, liver, tongue, tripe from the reticulum or rumen, glands (particularly the pancreas and thymus, referred to as sweetbread), the heart, the brain (although forbidden where there is a danger of bovine spongiform encephalopathy, BSE, commonly referred to as mad cow disease), the kidneys, and the tender testicles of the bull (known in the United States as calf fries, prairie oysters, or Rocky Mountain oysters). Some intestines are cooked and eaten as is, but are more often cleaned and used as natural sausage casings. The bones are used for making beef stock. Meat from younger cows (calves) is called veal.
+
+        Beef from steers and heifers is similar. Depending on economics, the number of heifers kept for breeding varies. The meat from older bulls, because it is usually tougher, is frequently used for mince (known as ground beef in the United States). Cattle raised for beef may be allowed to roam free on grasslands, or may be confined at some stage in pens as part of a large feeding operation called a feedlot (or concentrated animal feeding operation), where they are usually fed a ration of grain, protein, roughage and a vitamin/mineral preblend. 
+    </div>
+
+    <div class="jumbotron">
+      <h3 id="Sushi">
+        Sushi
+      </h3>
+      <p>
+        Sushi  is a traditional Japanese dish of prepared vinegared rice , usually with some sugar and salt, accompanying a variety of ingredients  such as seafood, often raw, and vegetables. Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice", also referred to as shari , or sumeshi .
+
+        Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice or short-grain rice. It is very often prepared with seafood, such as squid, eel, yellowtail, salmon, tuna or imitation crab meat. Many types of sushi are vegetarian. It is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish or pickled daikon (takuan) are popular garnishes for the dish.
+
+        Sushi is sometimes confused with sashimi, a related dish in Japanese cuisine that consists of thinly sliced raw fish, or occasionally meat, and an optional serving of rice.
+
+        The increasing popularity of sushi around the world has resulted in variations typically found in the Western world, but rarely in Japan. A notable exception to this is the use of salmon, which was introduced by a Norwegian businessman tasked with helping the Norwegian salmon industry in the 1980s. Such creations to suit the Western palate were initially fueled by the invention of the California roll (a norimaki with crab (later, imitation crab), cucumber, and avocado). A wide variety of popular rolls (norimaki and uramaki) has evolved since. Norway roll is another variant of uramakizushi filled with tamago (omelette), imitation crab and cucumber, rolled with shiso leaf and nori, topped with slices of Norwegian salmon, garnished with lemon and mayonnaise.
+      </p>
+    </div>
+  </div>
+
+  <footer class="panel-footer">
+    <div class="container">
+    </div>
+  </footer>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
